--- a/scai/lama/examples/make.inc.in
+++ b/scai/lama/examples/make.inc.in
@@ -33,8 +33,8 @@
 LAMA_ROOT=${CMAKE_INSTALL_PREFIX}
 BOOST_INCLUDE_DIR=${Boost_INCLUDE_DIR}
 CXX=${CMAKE_CXX_COMPILER}
-CXX_FLAGS=${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE}
-LAMA_LD_FLAGS=${LAMA_USER_LINK_FLAGS}
+CXX_FLAGS=${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} -D${SCAI_LOGGING_FLAG}
+LAMA_LD_FLAGS=${LAMA_USER_LINK_FLAGS} -L${CMAKE_INSTALL_PREFIX}/lib -lama
 
 # CMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS} 
 # ADDITIONAL_CXX_FLAGS=${ADDITIONAL_CXX_FLAGS} 
