moved concluding compiler flags for all projects

--- a/scai/hmemo/CMakeLists.txt
+++ b/scai/hmemo/CMakeLists.txt
@@ -48,15 +48,6 @@ if    ( NOT SCAI_COMPLETE_BUILD )
 	include ( SetBuildFlags )
 	include ( SetCPPFlags )
 	
-else  ( NOT SCAI_COMPLETE_BUILD )
-
-	add_definitions( ${ADDITIONAL_WARNING_FLAGS} )
-
-	set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ADDITIONAL_CXX_FLAGS}")
-	set ( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${ADDITIONAL_CXX_FLAGS_RELEASE} " )
-	set ( CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${ADDITIONAL_LINKER_FLAGS} " )
-	set ( CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${ADDITIONAL_LINKER_FLAGS} " )
-
 endif ( NOT SCAI_COMPLETE_BUILD )
 
 if ( NOT CXX_SUPPORTS_C11 )
@@ -106,16 +97,43 @@ if    ( WIN32 )
 	add_definitions ( -DCOMMON_COMPILING_DLL )
 endif ( WIN32 )
 
-message( STATUS "CUDA_FOUND = ${CUDA_FOUND}" )
-message( STATUS "USE_CUDA = ${USE_CUDA}" )
+#message( STATUS "CUDA_FOUND = ${CUDA_FOUND}" )
+#message( STATUS "USE_CUDA = ${USE_CUDA}" )
 
 if    ( CUDA_FOUND AND USE_CUDA )
     add_subdirectory ( cuda )
-    message( STATUS "CUDA_SOURCES = ${CUDA_SOURCES}" )
+#    message( STATUS "CUDA_SOURCES = ${CUDA_SOURCES}" )
     include_directories ( ${CUDA_TOOLKIT_INCLUDE} )
 endif ( CUDA_FOUND AND USE_CUDA )
 
 include_directories ( . )
+
+#### concluding all defined compiler flags to CMAKE_..._FLAGS ####
+
+## add variables to cache with new names so they can be modified by the user via CCMAKE
+
+set ( ADDITIONAL_CXX_FLAGS "${LAMA_CXX_FLAGS}" CACHE STRING "additional flags for cxx compile and link" )
+set ( ADDITIONAL_WARNING_FLAGS "${LAMA_WARNING_FLAGS}" CACHE STRING "compilation flags concerning warnings" )
+set ( ADDITIONAL_CXX_FLAGS_RELEASE "${LAMA_CXX_FLAGS_RELEASE}" CACHE STRING "addtional cxx compiler flags for release optimizations" )
+set ( ADDITIONAL_LINKER_FLAGS "${LAMA_LINKER_FLAGS}" CACHE STRING "additional linker flags" )
+
+mark_as_advanced ( ADDITIONAL_CXX_FLAGS ADDITIONAL_WARNING_FLAGS ADDITIONAL_CXX_FLAGS_RELEASE ADDITIONAL_LINKER_FLAGS )
+
+###  Code coverage with gcov/lcov
+set ( USE_CODE_COVERAGE FALSE CACHE BOOL "Enable / Disable use of Code Coverage" )
+
+if    ( USE_CODE_COVERAGE )
+    set ( COVERAGE_FLAGS "-fprofile-arcs -ftest-coverage" )
+endif ( USE_CODE_COVERAGE )
+
+set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ADDITIONAL_CXX_FLAGS}")
+set ( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${ADDITIONAL_CXX_FLAGS_RELEASE} " )
+set ( CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${ADDITIONAL_LINKER_FLAGS} " )
+set ( CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${ADDITIONAL_LINKER_FLAGS} " )
+
+### add definitions ###
+
+add_definitions( ${ADDITIONAL_WARNING_FLAGS} )
 
 ### add library and put path to search path ###
 
