extract C++11 cmake feature; clean up external dependencies

--- a/scai/lama/CMakeLists.txt
+++ b/scai/lama/CMakeLists.txt
@@ -34,19 +34,11 @@
 ### Set required CMake version
 cmake_minimum_required ( VERSION 2.8 )
 
-### Set Module Path
-set ( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../CMake/Modules" )
-
-### Print LAMA Installation header
-message ( STATUS "" )
-message ( STATUS "LAMA Configuration:" )
-message ( STATUS "===================" )
-message ( STATUS "" )
-
 ### Set PROJECT NAME / supported LANGUAGES
 project ( LAMA CXX )
 
-### set Module Path
+### Set Module Path
+set ( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../CMake/Modules" )
 
 set ( LAMA_VERSION_NAME "Alpamayo" )
 set ( LAMA_COPYRIGHT_YEAR 2015 )
@@ -56,70 +48,27 @@ set ( LAMA_VERSION_PATCH 1 )
 set ( LAMA_VERSION_COUNT 3 )
 set ( LAMA_VERSION ${LAMA_VERSION_MAJOR}.${LAMA_VERSION_MINOR}.${LAMA_VERSION_PATCH} )
 
-### Variables / CMAKE Functions ###
+### Include Compiler Flags
 if    ( NOT SCAI_COMPLETE_BUILD )
-
 	include ( SetBuildFlags )
 	include ( SetCPPFlags )
-	include ( CompilerVersion )
-	
 endif ( NOT SCAI_COMPLETE_BUILD )
 
-message ( STATUS "CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS}" )
-
-include ( Functions/allFunctions )
-
-include ( SCAIAssert )
-
-## Define all search packages
+### include all search packages
 include ( InternalDependencies )
 include ( ExternalDependencies )
-
-# Find required packages
 
 foreach    ( module ${SCAI_LAMA_EXTERNAL_DEPS} )
     include( Package/${module} )
 endforeach ( module ${SCAI_LAMA_EXTERNAL_DEPS} )
 
-# Find required packages
 foreach    ( PACKAGE_TO_FIND ${SCAI_LAMA_INTERNAL_DEPS} )
     find_package ( ${PACKAGE_TO_FIND} ${SCAI_FIND_PACKAGE_FLAGS} REQUIRED )
 endforeach ( PACKAGE_TO_FIND $${SCAI_LAMA_INTERNAL_DEPS} )
 
-## Project System-Include
-include_directories ( ../.. )
-
-foreach    ( module ${SCAI_LAMA_INTERNAL_DEPS} )
-	string ( TOUPPER ${module} upper_module )
-    include_directories( ${${upper_module}_INCLUDE_DIR} )
-endforeach ( module ${SCAI_LAMA_INTERNAL_DEPS} )
-
-if    ( Boost_INCLUDE_DIR )
-    include_directories ( ${Boost_INCLUDE_DIR} )
-endif ( Boost_INCLUDE_DIR )
-
-#### concluding all defined compiler flags to CMAKE_..._FLAGS ####
-
-## add variables to cache with new names so they can be modified by the user via CCMAKE
-
-set ( ADDITIONAL_CXX_FLAGS "${LAMA_CXX_FLAGS}" CACHE STRING "additional flags for cxx compile and link" )
-set ( ADDITIONAL_WARNING_FLAGS "${LAMA_WARNING_FLAGS}" CACHE STRING "compilation flags concerning warnings" )
-set ( ADDITIONAL_CXX_FLAGS_RELEASE "${LAMA_CXX_FLAGS_RELEASE}" CACHE STRING "addtional cxx compiler flags for release optimizations" )
-set ( ADDITIONAL_LINKER_FLAGS "${LAMA_LINKER_FLAGS}" CACHE STRING "additional linker flags" )
-
-mark_as_advanced ( ADDITIONAL_CXX_FLAGS ADDITIONAL_WARNING_FLAGS ADDITIONAL_CXX_FLAGS_RELEASE ADDITIONAL_LINKER_FLAGS )
-
-###  Code coverage with gcov/lcov
-set ( USE_CODE_COVERAGE FALSE CACHE BOOL "Enable / Disable use of Code Coverage" )
-
-if    ( USE_CODE_COVERAGE )
-    set ( COVERAGE_FLAGS "-fprofile-arcs -ftest-coverage" )
-endif ( USE_CODE_COVERAGE )
-
-set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ADDITIONAL_CXX_FLAGS}")
-set ( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${ADDITIONAL_CXX_FLAGS_RELEASE} " )
-set ( CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${ADDITIONAL_LINKER_FLAGS} " )
-set ( CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${ADDITIONAL_LINKER_FLAGS} " )
+## finalize build flags
+set ( LAMA_CXX_FLAGS ${LAMA_CXX_FLAGS} ${SCAI_COMMON_FLAGS} )
+include ( ConcludeFlags )
 
 ### add definitions ###
 
@@ -142,19 +91,35 @@ if ( WIN32 )
 	add_definitions ( -DCOMMON_COMPILING_DLL )
 endif ( WIN32 )
 
-## build lama library
+## Project System-Include
+include_directories ( ../.. )
 
-### set this dir as lama source dir ###
-lama_set_source_dir ()
+foreach    ( module ${SCAI_LAMA_INTERNAL_DEPS} ${SCAI_LAMA_EXTERNAL_DEPS} )
+	string ( TOUPPER ${module} upper_module )
+    include_directories( ${${upper_module}_INCLUDE_DIR} )
+endforeach ( module ${SCAI_LAMA_INTERNAL_DEPS} ${SCAI_LAMA_EXTERNAL_DEPS} )
 
-if    ( MPI_FOUND AND USE_MPI )
-	include_directories ( ${MPI_INCLUDE_PATH} ) 
-endif ( MPI_FOUND AND USE_MPI )
+include ( SCAIAssert )
 
+## Project System-Include
+include_directories ( ../.. )
+
+#foreach    ( module ${SCAI_LAMA_INTERNAL_DEPS} ${SCAI_LAMA_EXTERNAL_DEPS} )
+#	string ( TOUPPER ${module} upper_module )
+#    include_directories( ${${upper_module}_INCLUDE_DIR} )
+#endforeach ( module ${SCAI_LAMA_INTERNAL_DEPS} ${SCAI_LAMA_EXTERNAL_DEPS} )
+
+## CUDA
 if    ( CUDA_FOUND AND USE_CUDA )
 	include_directories ( ${CUDA_INCLUDE_DIRS} )
 endif ( CUDA_FOUND AND USE_CUDA )
 
+## MPI
+if    ( MPI_FOUND AND USE_MPI )
+	include_directories ( ${MPI_INCLUDE_PATH} ) 
+endif ( MPI_FOUND AND USE_MPI )
+
+## Graph Partitioning
 if ( METIS_FOUND )
     include_directories ( ${METIS_INCLUDE_DIR} ) 
 endif ( METIS_FOUND )
@@ -163,6 +128,7 @@ if ( METIS_FOUND AND PARMETIS_FOUND )
     include_directories ( ${PARMETIS_INCLUDE_DIR} ) 
 endif ( METIS_FOUND AND PARMETIS_FOUND )
 
+## SCAI BLAS
 if ( SCAI_BLAS_NAME STREQUAL "MKL" )
     include_directories ( ${MKL_INCLUDE_DIRS} )
 elseif ( NOT SCAI_BLAS_NAME STREQUAL "MKL" AND NOT INTERNALBLAS_FOUND )
@@ -170,7 +136,14 @@ elseif ( NOT SCAI_BLAS_NAME STREQUAL "MKL" AND NOT INTERNALBLAS_FOUND )
 #    add_subdirectory( cblas )
 endif ( SCAI_BLAS_NAME STREQUAL "MKL" )
 
-### Add classes and header files ###
+## build lama library
+
+include ( Functions/lamaSourceSolution )
+
+### set this dir as lama source dir
+lama_set_source_dir ()
+
+### Add classes and header files
 set ( CLASSES
         CommunicationPlan
         Communicator
@@ -200,10 +173,12 @@ lama_headers ( ${HEADERS} )
 
 ### add subdirectories ###
 
+## CUDA
 if ( CUDA_FOUND AND USE_CUDA AND CUDA_HAVE_GPU )
     add_subdirectory ( cuda )
 endif ( CUDA_FOUND AND USE_CUDA AND CUDA_HAVE_GPU )
 
+## MIC
 if ( USE_MIC )
     add_subdirectory ( mic )
 endif ( USE_MIC )
@@ -214,12 +189,17 @@ add_subdirectory ( io )
 add_subdirectory ( macros )
 add_subdirectory ( matrix )
 add_subdirectory ( matutils )
+
+## MPI
 if ( MPI_FOUND AND USE_MPI )
     add_subdirectory ( mpi )
 endif ( MPI_FOUND AND USE_MPI )
+
+## GPI
 if ( GPI2_FOUND AND IBVERBS_FOUND AND USE_GPI2 )
     add_subdirectory( gpi )
 endif ( GPI2_FOUND AND IBVERBS_FOUND AND USE_GPI2 )
+
 add_subdirectory ( norm )
 add_subdirectory ( openmp )
 add_subdirectory ( solver )
@@ -245,23 +225,28 @@ endif ( CUDA_FOUND AND USE_CUDA AND CUDA_HAVE_GPU )
 
 add_library ( ama ${SCAI_LIBRARY_TYPE} ${CXX_SOURCES} ) #${HEADERS} )
 
-# internal libraries
+## add link libraries
 foreach    ( module ${SCAI_LAMA_INTERNAL_DEPS} )
 	string ( TOUPPER ${module} upper_module )
     target_link_libraries ( ama ${${upper_module}_LIBRARY} )
 endforeach ( module ${SCAI_LAMA_INTERNAL_DEPS} )
 
+foreach    ( module ${SCAI_LAMA_EXTERNAL_DEPS} )
+	string ( TOUPPER ${module} upper_module )
+    target_link_libraries ( ama ${SCAI_${upper_module}_LIBRARIES} )
+endforeach ( module ${SCAI_LAMA_EXTERNAL_DEPS} )
+
 # external libraries
-target_link_libraries ( ama ${SCAI_BLAS_LIBRARIES} )
+#target_link_libraries ( ama ${SCAI_BLAS_LIBRARIES} )
 
-if    ( CUDA_FOUND AND USE_CUDA AND CUDA_HAVE_GPU )
-	 target_link_libraries ( ama ${CUDA_cusparse_LIBRARY} ${CUDA_cublas_LIBRARY}
-	 							 ${CUDA_CUDART_LIBRARY} ${CUDA_CUDA_LIBRARY} )          
-endif ( CUDA_FOUND AND USE_CUDA AND CUDA_HAVE_GPU )
+#if    ( CUDA_FOUND AND USE_CUDA AND CUDA_HAVE_GPU )
+#	 target_link_libraries ( ama ${CUDA_cusparse_LIBRARY} ${CUDA_cublas_LIBRARY}
+#	 							 ${CUDA_CUDART_LIBRARY} ${CUDA_CUDA_LIBRARY} )          
+#endif ( CUDA_FOUND AND USE_CUDA AND CUDA_HAVE_GPU )
 
-if    ( MPI_FOUND AND USE_MPI )
-    target_link_libraries ( ama ${MPI_LIBRARIES} )
-endif ( MPI_FOUND AND USE_MPI )
+#if    ( MPI_FOUND AND USE_MPI )
+#    target_link_libraries ( ama ${MPI_LIBRARIES} )
+#endif ( MPI_FOUND AND USE_MPI )
 
 if    ( GPI2_FOUND AND IBVERBS_FOUND AND USE_GPI2 )
     target_link_libraries ( ama ${GPI2_LIBRARIES} ${IBVERBS_LIBRARIES} )
@@ -272,44 +257,32 @@ if ( SCALAPACK_FOUND AND MPI_FOUND AND USE_MPI )
     add_definitions( -DSCAI_MKL_SCALAPACK ) ## TODO: where used?!
 endif ( SCALAPACK_FOUND AND MPI_FOUND AND USE_MPI )
 
-if ( METIS_FOUND )
-    target_link_libraries( ama ${METIS_LIBRARY} )
-endif ( METIS_FOUND ) 
+#if ( METIS_FOUND )
+#    target_link_libraries( ama ${METIS_LIBRARY} )
+#endif ( METIS_FOUND ) 
+#
+#if ( METIS_FOUND AND PARMETIS_FOUND )
+#    target_link_libraries( ama ${PARMETIS_LIBRARY} )
+#endif ( METIS_FOUND AND PARMETIS_FOUND )
 
-if ( METIS_FOUND AND PARMETIS_FOUND )
-    target_link_libraries( ama ${PARMETIS_LIBRARY} )
-endif ( METIS_FOUND AND PARMETIS_FOUND )
-
-# generate file make.inc + install it
-configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/examples/make.inc.in" "${CMAKE_CURRENT_BINARY_DIR}/examples/make.inc" )
-install ( FILES "${CMAKE_CURRENT_BINARY_DIR}/examples/make.inc" DESTINATION share/examples )
-
-### add definitions ###
-if ( WIN32 )
-    add_definitions ( -DCOMMON_COMPILING_DLL )
-endif ( WIN32 )
-
-### install ###
-
+### install
 install ( TARGETS ama DESTINATION lib )
-
-## end build lama library
-
-### Examples ###
-# copy examples in build directory + install it
-file ( COPY ${CMAKE_CURRENT_SOURCE_DIR}/examples DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
-install ( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/examples DESTINATION share )
 
 ## install library.hpp
 configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/lama.hpp.in" "${CMAKE_CURRENT_BINARY_DIR}/include/lama.hpp" )
 install ( FILES "${CMAKE_CURRENT_BINARY_DIR}/include/lama.hpp" DESTINATION include/scai )
 
-## add custum target distClean
+# generate file make.inc + install it
+configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/examples/make.inc.in" "${CMAKE_CURRENT_BINARY_DIR}/examples/make.inc" )
+install ( FILES "${CMAKE_CURRENT_BINARY_DIR}/examples/make.inc" DESTINATION share/examples )
+
+# copy examples in build directory + install it
+file ( COPY ${CMAKE_CURRENT_SOURCE_DIR}/examples DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
+install ( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/examples DESTINATION share )
 
 ## add custum target distClean, but only if this project is not included
-
-if ( CMAKE_SOURCE_DIR EQUAL CMAKE_CURRENT_SOURCE_DIR )
-    add_custom_target ( distclean )
-endif ()
+if    ( NOT SCAI_COMPLETE_BUILD )
+	include ( DistClean )
+endif ( NOT SCAI_COMPLETE_BUILD )
 
 #include ( LAMASummary )
