--- a/scai/common/CMakeLists.txt
+++ b/scai/common/CMakeLists.txt
@@ -39,85 +39,59 @@ project ( scai_common CXX )
 ### Set Module Path
 set ( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../CMake/Modules" )
 
+### Include Compiler Flags
 if    ( NOT SCAI_COMPLETE_BUILD )
-	
-	### Include Compiler Flags
 	include ( SetBuildFlags )
 	include ( SetCPPFlags )
-
 endif ( NOT SCAI_COMPLETE_BUILD )
 
-## Define all search packages
+### include all search packages
 # no internal dependencies
 include ( ExternalDependencies )
-
-# Find required packages
 
 foreach    ( module ${SCAI_COMMON_EXTERNAL_DEPS} )
     include( Package/${module} )
 endforeach ( module ${SCAI_COMMON_EXTERNAL_DEPS} )
 
-## Project System-Include
+### finalize build flags
+include ( ConcludeFlags )
 
-include_directories ( ../.. )
+### add definitions
 
-foreach    ( module ${SCAI_COMMON_INTERNAL_DEPS} )
-    include_directories( ${${module}_INCLUDE_DIR} )
-endforeach ( module ${SCAI_COMMON_INTERNAL_DEPS} )
-
-## add subdirectories
-add_subdirectory ( examples )
-
-## build library
-file ( GLOB CPP_SOURCES "*.cpp" )
-file ( GLOB HPP_HEADERS "*.hpp" )
+add_definitions( ${ADDITIONAL_WARNING_FLAGS} )
 
 if    ( WIN32 )
 	add_definitions ( -DCOMMON_COMPILING_DLL )
 endif ( WIN32 )
 
+### Project System-Include
+include_directories ( ../.. )
+
+### build library
+
+## add subdirectories
+add_subdirectory ( examples )
+
+## search for files
+file ( GLOB CPP_SOURCES "*.cpp" )
+file ( GLOB HPP_HEADERS "*.hpp" )
+
+## add CUDA if supported
 if    ( CUDA_FOUND AND USE_CUDA )
     add_subdirectory ( cuda )
     include_directories ( ${CUDA_TOOLKIT_INCLUDE} )
 endif ( CUDA_FOUND AND USE_CUDA )
 
-include_directories ( . )
-
-#### concluding all defined compiler flags to CMAKE_..._FLAGS ####
-
-## add variables to cache with new names so they can be modified by the user via CCMAKE
-
-set ( ADDITIONAL_CXX_FLAGS "${LAMA_CXX_FLAGS}" CACHE STRING "additional flags for cxx compile and link" )
-set ( ADDITIONAL_WARNING_FLAGS "${LAMA_WARNING_FLAGS}" CACHE STRING "compilation flags concerning warnings" )
-set ( ADDITIONAL_CXX_FLAGS_RELEASE "${LAMA_CXX_FLAGS_RELEASE}" CACHE STRING "addtional cxx compiler flags for release optimizations" )
-set ( ADDITIONAL_LINKER_FLAGS "${LAMA_LINKER_FLAGS}" CACHE STRING "additional linker flags" )
-
-mark_as_advanced ( ADDITIONAL_CXX_FLAGS ADDITIONAL_WARNING_FLAGS ADDITIONAL_CXX_FLAGS_RELEASE ADDITIONAL_LINKER_FLAGS )
-
-###  Code coverage with gcov/lcov
-set ( USE_CODE_COVERAGE FALSE CACHE BOOL "Enable / Disable use of Code Coverage" )
-
-if    ( USE_CODE_COVERAGE )
-    set ( COVERAGE_FLAGS "-fprofile-arcs -ftest-coverage" )
-endif ( USE_CODE_COVERAGE )
-
-set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ADDITIONAL_CXX_FLAGS}")
-set ( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${ADDITIONAL_CXX_FLAGS_RELEASE} " )
-set ( CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${ADDITIONAL_LINKER_FLAGS} " )
-set ( CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${ADDITIONAL_LINKER_FLAGS} " )
-
-### add definitions ###
-
-add_definitions( ${ADDITIONAL_WARNING_FLAGS} )
-
-### add library and put path to search path ###
-
+## add library
 add_library ( scai_common SHARED ${CPP_SOURCES} ${CUDA_SOURCES} )
 
-target_link_libraries( scai_common ${SCAI_THREAD_LIBRARY}  )
+## add link libraries
+foreach    ( module ${SCAI_HMEMO_EXTERNAL_DEPS} )
+	string ( TOUPPER ${module} upper_module )
+    target_link_libraries ( scai_common ${SCAI_${upper_module}_LIBRARIES} )
+endforeach ( module ${SCAI_HMEMO_EXTERNAL_DEPS} )
 
 ### install ###
-
 install ( TARGETS scai_common DESTINATION lib )
 install ( FILES ${HPP_HEADERS} DESTINATION include/scai/common )
 
@@ -125,7 +99,6 @@ install ( FILES ${HPP_HEADERS} DESTINATION include/scai/common )
 install ( FILES ../common.hpp DESTINATION include/scai )
 
 ## add custum target distClean, but only if this project is not included
-
-if ( CMAKE_SOURCE_DIR EQUAL CMAKE_CURRENT_SOURCE_DIR )
-    add_custom_target ( distclean )
-endif ()
+if    ( NOT SCAI_COMPLETE_BUILD )
+	include ( DistClean )
+endif ( NOT SCAI_COMPLETE_BUILD )
