--- a/scai/common/examples/CMakeLists.txt
+++ b/scai/common/examples/CMakeLists.txt
@@ -32,6 +32,9 @@
 
 # ThreadTest example
 
+include ( CheckC++11 )
+set ( CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} ${SCAI_LANG_FLAGS} )
+
 foreach ( executable ExceptionDemo CriticalRegion Barrier DemoFactory DemoFactory1 )
     add_executable ( ${executable} ${executable}.cpp )
     target_link_libraries ( ${executable} scai_common )
