seperated VersionDefinition; clean up warning flags for OpenMP and SCAI_BLAS_INCLUDE_DIR

--- a/scai/CMakeLists.txt
+++ b/scai/CMakeLists.txt
@@ -36,17 +36,9 @@ cmake_minimum_required ( VERSION 2.8 )
 project ( LAMA_ALL CXX )
 set ( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../CMake/Modules" )
 
-## version info
-set ( LAMA_VERSION_NAME "Alpamayo" )
-set ( LAMA_COPYRIGHT_YEAR 2015 )
-set ( LAMA_VERSION_MAJOR 1 )
-set ( LAMA_VERSION_MINOR 0 )
-set ( LAMA_VERSION_PATCH 1 )
-set ( LAMA_VERSION_COUNT 3 )
-set ( LAMA_VERSION ${LAMA_VERSION_MAJOR}.${LAMA_VERSION_MINOR}.${LAMA_VERSION_PATCH} )
+include ( VersionDefinition )
 
 ## general Settings for all projects
-
 include ( SetBuildFlags ) # VERBOSE, RPATH, LIB64, BUILD_SHARED
 include ( SCAIAssert )
 include ( CompilerVersion )
