--- a/scai/logging/CMakeLists.txt
+++ b/scai/logging/CMakeLists.txt
@@ -106,3 +106,7 @@ install ( FILES ../logging.hpp DESTINATION include/scai )
 if    ( NOT SCAI_COMPLETE_BUILD )
 	include ( DistClean )
 endif ( NOT SCAI_COMPLETE_BUILD )
+
+if    ( CMAKE_VERBOSE_BUILD OR NOT SCAI_COMPLETE_BUILD )
+	include ( Summaries/Logging )
+endif ( CMAKE_VERBOSE_BUILD OR NOT SCAI_COMPLETE_BUILD )
