--- a/scai/tracing/CMakeLists.txt
+++ b/scai/tracing/CMakeLists.txt
@@ -110,3 +110,7 @@ install ( FILES ../tracing.hpp DESTINATION include/scai )
 if    ( NOT SCAI_COMPLETE_BUILD )
 	include ( DistClean )
 endif ( NOT SCAI_COMPLETE_BUILD )
+
+if    ( CMAKE_VERBOSE_BUILD OR NOT SCAI_COMPLETE_BUILD )
+	include ( Summaries/Tracing )
+endif ( CMAKE_VERBOSE_BUILD OR NOT SCAI_COMPLETE_BUILD )
