--- a/scai/tracing/CMakeLists.txt
+++ b/scai/tracing/CMakeLists.txt
@@ -110,5 +110,5 @@ if    ( NOT SCAI_COMPLETE_BUILD )
 endif ( NOT SCAI_COMPLETE_BUILD )
 
 if    ( CMAKE_VERBOSE_BUILD OR NOT SCAI_COMPLETE_BUILD )
-	include ( Summaries/Tracing )
+	include ( Summaries/tracing )
 endif ( CMAKE_VERBOSE_BUILD OR NOT SCAI_COMPLETE_BUILD )
