--- a/scai/lama/CMakeLists.txt
+++ b/scai/lama/CMakeLists.txt
@@ -229,5 +229,5 @@ if    ( NOT SCAI_COMPLETE_BUILD )
 endif ( NOT SCAI_COMPLETE_BUILD )
 
 if    ( CMAKE_VERBOSE_BUILD OR NOT SCAI_COMPLETE_BUILD )
-	include ( Summaries/LAMA )
+	include ( Summaries/lama )
 endif ( CMAKE_VERBOSE_BUILD OR NOT SCAI_COMPLETE_BUILD )
