enable language C for older CMake version and find openmp; add forgotten c++11 check in scai

--- a/scai/CMakeLists.txt
+++ b/scai/CMakeLists.txt
@@ -43,6 +43,11 @@ include ( SetBuildFlags ) # VERBOSE, RPATH, LIB64, BUILD_SHARED
 include ( SCAIAssert )
 include ( SetCPPFlags )
 
+include ( CheckC++11 )
+if    ( NOT CXX_SUPPORTS_C11 )
+    find_package( Boost ${SCAI_FIND_PACKAGE_FLAGS} )
+endif ( NOT CXX_SUPPORTS_C11 )
+
 include ( Functions/checkValue )
 include ( Functions/setAndCheckCache )
 include ( Functions/checkWhiteList )
