MIC: adapted to new version of LAMA, compiles, but not runs yet

--- a/scai/lama/mic/CMakeLists.txt
+++ b/scai/lama/mic/CMakeLists.txt
@@ -33,19 +33,19 @@
 
 ### Add classes and header files ###
 set ( CLASSES
-        MICContext
-        MICSyncToken
-        MICContextManager
-        MICUtils
-        MICCSRUtils
-        MICMKLCSRUtils
-        MICELLUtils
-        MICJDSUtils
-        MICDIAUtils
-        MICCOOUtils
-        MICBLAS1
-        MICBLAS2
-        MICBLAS3
+          MICContext
+          MICSyncToken
+          MICMemory
+        # MICUtils
+        # MICCSRUtils
+        # MICMKLCSRUtils
+        # MICELLUtils
+        # MICJDSUtils
+        # MICDIAUtils
+        # MICCOOUtils
+        # MICBLAS1
+        # MICBLAS2
+        # MICBLAS3
     )
 
 lama_classes ( ${CLASSES} )
