--- a/scai/common/examples/CMakeLists.txt
+++ b/scai/common/examples/CMakeLists.txt
@@ -33,7 +33,17 @@
 # ThreadTest example
 
 include ( CheckC++11 )
+if    ( NOT CXX_SUPPORTS_C11 )
+    include( Package/Boost )
+    include_directories ( ${BOOST_INCLUDE_DIR} )
+endif ( NOT CXX_SUPPORTS_C11 )
+
 set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${SCAI_LANG_FLAGS}" )
+
+if    ( OPENMP_FOUND AND USE_OPENMP )
+	set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}" )
+endif ( OPENMP_FOUND AND USE_OPENMP )
+
 
 foreach ( executable ExceptionDemo CriticalRegion Barrier DemoFactory DemoFactory1 DemoPointer )
     add_executable ( ${executable} ${executable}.cpp )
