--- a/scai/tasking/CMakeLists.txt
+++ b/scai/tasking/CMakeLists.txt
@@ -66,6 +66,8 @@ add_definitions ( -D${SCAI_LOGGING_FLAG} )
 
 add_definitions( -DSCAI_TRACE_ON )
 
+add_definitions ( -DSCAI_ASSERT_LEVEL_${SCAI_ASSERT_LEVEL} )
+
 if    ( WIN32 )
 	add_definitions ( -DCOMMON_COMPILING_DLL )
 endif ( WIN32 )
