--- a/scai/logging/CMakeLists.txt
+++ b/scai/logging/CMakeLists.txt
@@ -93,13 +93,15 @@ file ( GLOB CPP_SOURCES "*.cpp" )
 file ( GLOB HPP_HEADERS "*.hpp" )
 
 ### add library
-add_library ( scai_logging SHARED ${CPP_SOURCES} )
+add_library ( scai_logging ${SCAI_LIBRARY_TYPE} ${CPP_SOURCES} )
 
 ## add link libraries
+list ( REVERSE SCAI_LOGGING_INTERNAL_DEPS )
 foreach    ( module ${SCAI_LOGGING_INTERNAL_DEPS} )
 	string ( TOUPPER ${module} upper_module )
-    target_link_libraries ( scai_logging ${${upper_module}_LIBRARY} )
+	set ( LOGGING_LINK_LIBRARIES ${LOGGING_LINK_LIBRARIES} ${${upper_module}_LIBRARY} )
 endforeach ( module ${SCAI_LOGGING_INTERNAL_DEPS} )
+target_link_libraries ( scai_logging ${SCAI_START_LINK_LIBRARIES} ${LOGGING_LINK_LIBRARIES} ${SCAI_END_LINK_LIBRARIES} )
 
 ### install ###
 install ( TARGETS scai_logging DESTINATION lib )
