--- a/scai/lama/test/CMakeLists.txt
+++ b/scai/lama/test/CMakeLists.txt
@@ -157,6 +157,12 @@ endif ( WIN32 )
 ### add executeable ###
 add_executable ( lama_test lama_test.cpp ${CXX_SOURCES} )
 
+if ( USE_MIC )
+    set ( MKLROOT $ENV{MKLROOT} )
+    set_target_properties( lama_test PROPERTIES LINK_FLAGS
+        "-offload-option,mic,compiler,\"-L${MKLROOT}/lib/mic -Wl,--start-group -lmkl_intel_lp64 -lmkl_intel_thread -lmkl_core -Wl,--end-group\"" )
+endif ( USE_MIC )
+
 ### target link libraries ###
 if ( WIN32 )
     target_link_libraries ( lama_test ama )
