--- a/scai/lama/examples/make.inc.in
+++ b/scai/lama/examples/make.inc.in
@@ -34,8 +34,9 @@ LAMA_ROOT=${CMAKE_INSTALL_PREFIX}
 BOOST_INCLUDE_DIR=${BOOST_INCLUDE_DIR}
 CXX=${CMAKE_CXX_COMPILER}
 CXX_FLAGS=${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} -D${SCAI_LOGGING_FLAG}
-LAMA_LD_FLAGS=${LAMA_USER_LINK_FLAGS} -L${CMAKE_INSTALL_PREFIX}/lib -ldl -lscai_common -lscai_logging -lscai_tracing -lscai_tasking -lscai_hmemo -lama -fopenmp   
+LAMA_LD_FLAGS=${CMAKE_CXX_FLAGS} ${LAMA_USER_LINK_FLAGS} -L${CMAKE_INSTALL_PREFIX}/lib -lama
 
+# CMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}
 # CMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS} 
 # ADDITIONAL_CXX_FLAGS=${ADDITIONAL_CXX_FLAGS} 
 # CMAKE_CXX_FLAGS_RELEASE=${CMAKE_CXX_FLAGS_RELEASE} 
